begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.helpers
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneAcl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|exceptions
operator|.
name|OMException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclRights
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclType
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|security
operator|.
name|acl
operator|.
name|IAccessAuthorizer
operator|.
name|ACLIdentityType
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|BitSet
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|LinkedList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Map
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|HashMap
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Objects
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|exceptions
operator|.
name|OMException
operator|.
name|ResultCodes
operator|.
name|INVALID_REQUEST
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclRights
operator|.
name|ALL
import|;
end_import

begin_comment
comment|/**  * This helper class keeps a map of all user and their permissions.  */
end_comment

begin_class
annotation|@
name|SuppressWarnings
argument_list|(
literal|"ProtocolBufferOrdinal"
argument_list|)
DECL|class|OmOzoneAclMap
specifier|public
class|class
name|OmOzoneAclMap
block|{
comment|// per Acl Type user:rights map
DECL|field|aclMaps
specifier|private
name|ArrayList
argument_list|<
name|Map
argument_list|<
name|String
argument_list|,
name|BitSet
argument_list|>
argument_list|>
name|aclMaps
decl_stmt|;
DECL|method|OmOzoneAclMap ()
name|OmOzoneAclMap
parameter_list|()
block|{
name|aclMaps
operator|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
expr_stmt|;
for|for
control|(
name|OzoneAclType
name|aclType
range|:
name|OzoneAclType
operator|.
name|values
argument_list|()
control|)
block|{
name|aclMaps
operator|.
name|add
argument_list|(
name|aclType
operator|.
name|ordinal
argument_list|()
argument_list|,
operator|new
name|HashMap
argument_list|<>
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
DECL|method|getMap (OzoneAclType type)
specifier|private
name|Map
argument_list|<
name|String
argument_list|,
name|BitSet
argument_list|>
name|getMap
parameter_list|(
name|OzoneAclType
name|type
parameter_list|)
block|{
return|return
name|aclMaps
operator|.
name|get
argument_list|(
name|type
operator|.
name|ordinal
argument_list|()
argument_list|)
return|;
block|}
comment|// For a given acl type and user, get the stored acl
DECL|method|getAcl (OzoneAclType type, String user)
specifier|private
name|BitSet
name|getAcl
parameter_list|(
name|OzoneAclType
name|type
parameter_list|,
name|String
name|user
parameter_list|)
block|{
return|return
name|getMap
argument_list|(
name|type
argument_list|)
operator|.
name|get
argument_list|(
name|user
argument_list|)
return|;
block|}
DECL|method|getAcl ()
specifier|public
name|List
argument_list|<
name|OzoneAcl
argument_list|>
name|getAcl
parameter_list|()
block|{
name|List
argument_list|<
name|OzoneAcl
argument_list|>
name|acls
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
for|for
control|(
name|OzoneAclType
name|type
range|:
name|OzoneAclType
operator|.
name|values
argument_list|()
control|)
block|{
name|aclMaps
operator|.
name|get
argument_list|(
name|type
operator|.
name|ordinal
argument_list|()
argument_list|)
operator|.
name|entrySet
argument_list|()
operator|.
name|stream
argument_list|()
operator|.
name|forEach
argument_list|(
name|entry
lambda|->
name|acls
operator|.
name|add
argument_list|(
operator|new
name|OzoneAcl
argument_list|(
name|ACLIdentityType
operator|.
name|valueOf
argument_list|(
name|type
operator|.
name|name
argument_list|()
argument_list|)
argument_list|,
name|entry
operator|.
name|getKey
argument_list|()
argument_list|,
name|entry
operator|.
name|getValue
argument_list|()
argument_list|)
argument_list|)
argument_list|)
expr_stmt|;
block|}
return|return
name|acls
return|;
block|}
comment|// Add a new acl to the map
DECL|method|addAcl (OzoneAcl acl)
specifier|public
name|void
name|addAcl
parameter_list|(
name|OzoneAcl
name|acl
parameter_list|)
throws|throws
name|OMException
block|{
name|Objects
operator|.
name|requireNonNull
argument_list|(
name|acl
argument_list|,
literal|"Acl should not be null."
argument_list|)
expr_stmt|;
name|OzoneAclType
name|aclType
init|=
name|OzoneAclType
operator|.
name|valueOf
argument_list|(
name|acl
operator|.
name|getType
argument_list|()
operator|.
name|name
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
operator|!
name|getMap
argument_list|(
name|aclType
argument_list|)
operator|.
name|containsKey
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|)
condition|)
block|{
name|getMap
argument_list|(
name|aclType
argument_list|)
operator|.
name|put
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|,
name|acl
operator|.
name|getAclBitSet
argument_list|()
argument_list|)
expr_stmt|;
block|}
else|else
block|{
comment|// throw exception if acl is already added.
throw|throw
operator|new
name|OMException
argument_list|(
literal|"Acl "
operator|+
name|acl
operator|+
literal|" already exist."
argument_list|,
name|INVALID_REQUEST
argument_list|)
throw|;
block|}
block|}
comment|// Add a new acl to the map
DECL|method|setAcls (List<OzoneAcl> acls)
specifier|public
name|void
name|setAcls
parameter_list|(
name|List
argument_list|<
name|OzoneAcl
argument_list|>
name|acls
parameter_list|)
throws|throws
name|OMException
block|{
name|Objects
operator|.
name|requireNonNull
argument_list|(
name|acls
argument_list|,
literal|"Acls should not be null."
argument_list|)
expr_stmt|;
comment|// Remove all Acls.
for|for
control|(
name|OzoneAclType
name|type
range|:
name|OzoneAclType
operator|.
name|values
argument_list|()
control|)
block|{
name|aclMaps
operator|.
name|get
argument_list|(
name|type
operator|.
name|ordinal
argument_list|()
argument_list|)
operator|.
name|clear
argument_list|()
expr_stmt|;
block|}
comment|// Add acls.
for|for
control|(
name|OzoneAcl
name|acl
range|:
name|acls
control|)
block|{
name|addAcl
argument_list|(
name|acl
argument_list|)
expr_stmt|;
block|}
block|}
comment|// Add a new acl to the map
DECL|method|removeAcl (OzoneAcl acl)
specifier|public
name|void
name|removeAcl
parameter_list|(
name|OzoneAcl
name|acl
parameter_list|)
throws|throws
name|OMException
block|{
name|Objects
operator|.
name|requireNonNull
argument_list|(
name|acl
argument_list|,
literal|"Acl should not be null."
argument_list|)
expr_stmt|;
name|OzoneAclType
name|aclType
init|=
name|OzoneAclType
operator|.
name|valueOf
argument_list|(
name|acl
operator|.
name|getType
argument_list|()
operator|.
name|name
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
name|getMap
argument_list|(
name|aclType
argument_list|)
operator|.
name|containsKey
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|)
condition|)
block|{
name|getMap
argument_list|(
name|aclType
argument_list|)
operator|.
name|remove
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|)
expr_stmt|;
block|}
else|else
block|{
comment|// throw exception if acl is already added.
throw|throw
operator|new
name|OMException
argument_list|(
literal|"Acl ["
operator|+
name|acl
operator|+
literal|"] doesn't exist."
argument_list|,
name|INVALID_REQUEST
argument_list|)
throw|;
block|}
block|}
comment|// Add a new acl to the map
DECL|method|addAcl (OzoneAclInfo acl)
specifier|public
name|void
name|addAcl
parameter_list|(
name|OzoneAclInfo
name|acl
parameter_list|)
throws|throws
name|OMException
block|{
name|Objects
operator|.
name|requireNonNull
argument_list|(
name|acl
argument_list|,
literal|"Acl should not be null."
argument_list|)
expr_stmt|;
if|if
condition|(
operator|!
name|getMap
argument_list|(
name|acl
operator|.
name|getType
argument_list|()
argument_list|)
operator|.
name|containsKey
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|)
condition|)
block|{
name|BitSet
name|acls
init|=
operator|new
name|BitSet
argument_list|(
name|OzoneAclRights
operator|.
name|values
argument_list|()
operator|.
name|length
argument_list|)
decl_stmt|;
name|acl
operator|.
name|getRightsList
argument_list|()
operator|.
name|parallelStream
argument_list|()
operator|.
name|forEach
argument_list|(
name|a
lambda|->
name|acls
operator|.
name|set
argument_list|(
name|a
operator|.
name|ordinal
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
name|getMap
argument_list|(
name|acl
operator|.
name|getType
argument_list|()
argument_list|)
operator|.
name|put
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|,
name|acls
argument_list|)
expr_stmt|;
block|}
else|else
block|{
comment|// throw exception if acl is already added.
throw|throw
operator|new
name|OMException
argument_list|(
literal|"Acl "
operator|+
name|acl
operator|+
literal|" already exist."
argument_list|,
name|INVALID_REQUEST
argument_list|)
throw|;
block|}
block|}
comment|// for a given acl, check if the user has access rights
DECL|method|hasAccess (OzoneAclInfo acl)
specifier|public
name|boolean
name|hasAccess
parameter_list|(
name|OzoneAclInfo
name|acl
parameter_list|)
block|{
if|if
condition|(
name|acl
operator|==
literal|null
condition|)
block|{
return|return
literal|false
return|;
block|}
name|BitSet
name|aclBitSet
init|=
name|getAcl
argument_list|(
name|acl
operator|.
name|getType
argument_list|()
argument_list|,
name|acl
operator|.
name|getName
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
name|aclBitSet
operator|==
literal|null
condition|)
block|{
return|return
literal|false
return|;
block|}
for|for
control|(
name|OzoneAclRights
name|right
range|:
name|acl
operator|.
name|getRightsList
argument_list|()
control|)
block|{
if|if
condition|(
name|aclBitSet
operator|.
name|get
argument_list|(
name|right
operator|.
name|ordinal
argument_list|()
argument_list|)
operator|||
name|aclBitSet
operator|.
name|get
argument_list|(
name|ALL
operator|.
name|ordinal
argument_list|()
argument_list|)
condition|)
block|{
return|return
literal|true
return|;
block|}
block|}
return|return
literal|false
return|;
block|}
comment|// Convert this map to OzoneAclInfo Protobuf List
DECL|method|ozoneAclGetProtobuf ()
specifier|public
name|List
argument_list|<
name|OzoneAclInfo
argument_list|>
name|ozoneAclGetProtobuf
parameter_list|()
block|{
name|List
argument_list|<
name|OzoneAclInfo
argument_list|>
name|aclList
init|=
operator|new
name|LinkedList
argument_list|<>
argument_list|()
decl_stmt|;
for|for
control|(
name|OzoneAclType
name|type
range|:
name|OzoneAclType
operator|.
name|values
argument_list|()
control|)
block|{
for|for
control|(
name|Map
operator|.
name|Entry
argument_list|<
name|String
argument_list|,
name|BitSet
argument_list|>
name|entry
range|:
name|aclMaps
operator|.
name|get
argument_list|(
name|type
operator|.
name|ordinal
argument_list|()
argument_list|)
operator|.
name|entrySet
argument_list|()
control|)
block|{
name|OzoneAclInfo
operator|.
name|Builder
name|builder
init|=
name|OzoneAclInfo
operator|.
name|newBuilder
argument_list|()
operator|.
name|setName
argument_list|(
name|entry
operator|.
name|getKey
argument_list|()
argument_list|)
operator|.
name|setType
argument_list|(
name|type
argument_list|)
decl_stmt|;
name|entry
operator|.
name|getValue
argument_list|()
operator|.
name|stream
argument_list|()
operator|.
name|forEach
argument_list|(
name|a
lambda|->
name|builder
operator|.
name|addRights
argument_list|(
name|OzoneAclRights
operator|.
name|values
argument_list|()
index|[
name|a
index|]
argument_list|)
argument_list|)
expr_stmt|;
name|aclList
operator|.
name|add
argument_list|(
name|builder
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
return|return
name|aclList
return|;
block|}
comment|// Create map from list of OzoneAclInfos
DECL|method|ozoneAclGetFromProtobuf ( List<OzoneAclInfo> aclList)
specifier|public
specifier|static
name|OmOzoneAclMap
name|ozoneAclGetFromProtobuf
parameter_list|(
name|List
argument_list|<
name|OzoneAclInfo
argument_list|>
name|aclList
parameter_list|)
throws|throws
name|OMException
block|{
name|OmOzoneAclMap
name|aclMap
init|=
operator|new
name|OmOzoneAclMap
argument_list|()
decl_stmt|;
for|for
control|(
name|OzoneAclInfo
name|acl
range|:
name|aclList
control|)
block|{
name|aclMap
operator|.
name|addAcl
argument_list|(
name|acl
argument_list|)
expr_stmt|;
block|}
return|return
name|aclMap
return|;
block|}
block|}
end_class

end_unit

